<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:fillViewport="true"
    android:padding="0px" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="623dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        tools:context=".HomeActivity$CadastroSectionFragment" >

        <TextView
            android:id="@+id/txtDadosUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/txtDadosUsuario" />

        <TextView
            android:id="@+id/txtNomeProprietario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/txtDadosUsuario"
            android:layout_marginTop="32dp"
            android:text="@string/txtNomeProprietario" />

        <EditText
            android:id="@+id/edtNomeProprietario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtNomeProprietario"
            android:ems="10"
            android:hint="@string/txtNomeProprietario"
            android:inputType="textPersonName"
            android:text="augusto" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/txtCpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edtNomeProprietario"
            android:layout_marginTop="20dp"
            android:text="@string/txtCPF" />

        <EditText
            android:id="@+id/edtCpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtCpf"
            android:ems="10"
            android:hint="@string/txtCPF"
            android:inputType="number"
            android:maxLength="11"
            android:text="02684264066" />

        <TextView
            android:id="@+id/txtEndereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edtCpf"
            android:layout_marginTop="15dp"
            android:text="@string/txtEndereco" />

        <EditText
            android:id="@+id/edtEndereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtEndereco"
            android:ems="10"
            android:hint="@string/txtEndereco"
            android:inputType="text|textPostalAddress"
            android:text="rua monteiro lobato" />

        <TextView
            android:id="@+id/txtDadosVeiculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edtEndereco"
            android:layout_marginTop="19dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical"
            android:text="@string/txtDadosVeiculo" />

        <TextView
            android:id="@+id/txtPlacaVeiculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/txtDadosVeiculo"
            android:layout_marginTop="15dp"
            android:text="@string/txtPlaca" />

        <EditText
            android:id="@+id/edtPlacaVeiculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtPlacaVeiculo"
            android:ems="10"
            android:hint="@string/txtPlaca"
            android:maxLength="7"
            android:text="IIB3294" />

        <TextView
            android:id="@+id/txtMarcaModelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edtPlacaVeiculo"
            android:layout_marginTop="17dp"
            android:text="@string/txtMarca" />

        <EditText
            android:id="@+id/edtMarcaModelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txtMarcaModelo"
            android:ems="10"
            android:hint="@string/txtMarca"
            android:text="FIAT/PALIO" />

        <TextView
            android:id="@+id/txtAprovado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edtMarcaModelo"
            android:layout_below="@+id/edtMarcaModelo"
            android:layout_marginTop="14dp"
            android:text="@string/txtAvaliacao"
            android:visibility="invisible" />

        <RadioGroup
            android:id="@+id/rdGpAprovado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/txtAprovado"
            android:visibility="invisible" >

            <RadioButton
                android:id="@+id/rdAprovado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/txtAprovado" />

            <RadioButton
                android:id="@+id/rdReprovado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtReprovado" />
        </RadioGroup>

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/edtMarcaModelo"
            android:layout_below="@+id/rdGpAprovado"
            android:text="@string/txtEnviar" />

        <EditText
            android:id="@+id/edtObservacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rdGpAprovado"
            android:layout_below="@+id/btnEnviar"
            android:ems="10"
            android:hint="@string/txtObservacao"
            android:inputType="textMultiLine"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txtObservacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnEnviar"
            android:layout_alignBottom="@+id/btnEnviar"
            android:layout_alignLeft="@+id/edtObservacao"
            android:text="@string/txtObservacao"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/txtCancelar" />

    </RelativeLayout>

</ScrollView>